Bug 385872 - Strict warnings should only be enabled for chrome by default (in debug builds). r=jst, sr=brendan.